src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>ABR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Annual Budget Required. Requested by Lisha; Approved by J. Cary</description>
        <label>Annual Budget Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amt_Billable_Visit__c</fullName>
        <label>Amt/Billable Visit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Subsidy__c</fullName>
        <label>Annual Subsidy</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AutoExtTerm__c</fullName>
        <label>Auto Extend Term</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Extend__c</fullName>
        <label>Auto Extend</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes with Consent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Background_Check_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Background Check Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billable_Volume_Excess_Visits__c</fullName>
        <label>Billable Volume - Excess Visits</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billable_Volume_Visit_Shortfall__c</fullName>
        <label>Billable Volume - Visit Shortfall</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billable_Volume__c</fullName>
        <label>Billable Volume</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Company__c</fullName>
        <label>Billing Company</label>
        <picklist>
            <picklistValues>
                <fullName>EMBCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hourly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Cycle__c</fullName>
        <description>Jill Sanfilippo requested the values.</description>
        <label>Billing Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Board_Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Board Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Board_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Board Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collections_Protector_Terms__c</fullName>
        <label>Collections Protector Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Collections_Protector__c</fullName>
        <label>Collections Protector</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Duration_Days__c</fullName>
        <formula>EndDate  -  StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Duration (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Duration_Months__c</fullName>
        <formula>Contact_Duration_Days__c  / 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Duration (Months)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Duration_Years__c</fullName>
        <formula>Contact_Duration_Days__c /365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Duration (Years)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Term_YRS__c</fullName>
        <label>Contract Term (YRS)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contracted_Days__c</fullName>
        <formula>if(EndDate &lt; Today(), EndDate - StartDate, (Today() - StartDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contracted Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Corp_Entities__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corporate Entity</label>
        <referenceTo>Corp_Entities__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>R00N300000012TPIEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Signed_by__c</fullName>
        <description>Customer Signed by unlisted</description>
        <label>Customer Signed by Unlisted</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Notice__c</fullName>
        <label>Days Notice</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Fee_1__c</fullName>
        <label>Engagement Fee 1</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Excess_Patient__c</fullName>
        <label>Excess $/Patient</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facility_Specialty_Requests__c</fullName>
        <label>Facility Specialty Requests</label>
        <picklist>
            <picklistValues>
                <fullName>Cardiac Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiology - Interventional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiology-Invasive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiology - Non-Invasive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Care Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gastroenterology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hemotology/Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitalist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nephrology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OB/GYN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opthalmology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orthopedic Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pathology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pediatrics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychiatry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trauma Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occupational Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PALS</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate__c</fullName>
        <label>Hourly Rate</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inflation_Escalators__c</fullName>
        <label>Inflation Escalators</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Limit_Comment__c</fullName>
        <description>Added on 1/24 per Lisha</description>
        <label>Insurance Limit Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Insurance_Limits__c</fullName>
        <label>Insurance Limits</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Renewal_Start_Date__c</fullName>
        <label>Internal Renewal Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Notice_Date__c</fullName>
        <label>Issue Notice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Renewal_Notice_Date__c</fullName>
        <label>Issue Renewal Notice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Medical_Board_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medical Board Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Team_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medical Team Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Renewal__c</fullName>
        <label>Next Renewal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Non_Compete_Radius__c</fullName>
        <label>Non-Compete Radius</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Compete__c</fullName>
        <label>Non-Compete</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notice_Days__c</fullName>
        <label>Notice Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outstanding_Days__c</fullName>
        <description>Outstanding days from approval &quot;sent date&quot; to &quot;returned date&quot;.</description>
        <formula>(NULLVALUE(Returned_Date__c ,  TODAY() ) - Sent_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_Address__c</fullName>
        <label>Physical Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Placement_Fee_1__c</fullName>
        <label>Placement Fee 1</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>References_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>References Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remaining_Term__c</fullName>
        <formula>if(EndDate&lt;Today(), 0, (EndDate -  Today()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Term Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requirements__c</fullName>
        <description>Also would like to see a field labeled Requirements that would be a comment box so that we could write in whether the requirements were required at the start of the contract or could be acquired at a later date. 4/21 L. Falk</description>
        <label>Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Research_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Research Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Returned_Date__c</fullName>
        <label>Returned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sent_Date__c</fullName>
        <description>Date Contract Sent</description>
        <label>Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shortfall_Patient__c</fullName>
        <label>Shortfall $/Patient</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sourcing_Budet_Fee1__c</fullName>
        <label>Sourcing Budet Fee 1</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Specialty_1__c</fullName>
        <label>Specialty 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subsidy_Rate_Comments__c</fullName>
        <label>Subsidy/Rate Comments</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Date__c</fullName>
        <label>Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Volume_Protector__c</fullName>
        <label>Volume Protector</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volume_Terms__c</fullName>
        <description>Changed  Field Length 1/24</description>
        <label>Volume Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>experianqas__Updated_Touchpoints_Timestamp__c</fullName>
        <label>Updated Touchpoints Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>experianqas__Updated_Touchpoints__c</fullName>
        <label>Updated Touchpoints</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>CONTRACT.RECORDTYPE</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
        <sharedTo>
            <roleAndSubordinates>Administration</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllFacilityContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CONTRACT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract.EDContract</value>
        </filters>
        <label>All Facility Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllMSSContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract.MSSContracts</value>
        </filters>
        <label>All MSS Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <recordTypes>
        <fullName>EDContract</fullName>
        <active>true</active>
        <description>Use to track facility ED contracts.</description>
        <label>ED Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hospitalist</fullName>
        <active>true</active>
        <description>Use to track Hospitalist Contracts</description>
        <label>Hospitalist</label>
    </recordTypes>
    <recordTypes>
        <fullName>MSSContracts</fullName>
        <active>true</active>
        <description>Use for MSS Contract Tracking</description>
        <label>MSS Contracts</label>
    </recordTypes>
</CustomObject>